@@ -68,6 +68,10 @@ dependencies {
 
     integrationTestImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
 
-    integrationTestImplementation project(':libs:rest:rest-stubs-impl')
+    integrationTestImplementation project(':libs:rest:ssl-cert-read-impl')
     integrationTestImplementation project(":testing:test-utilities")
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs '--add-opens', 'java.base/java.net=ALL-UNNAMED'
 }
